--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "vue-cli-plugin-postcss-precss",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Vue cli 3.x plugin for postcss. Allow you to use Sass-like markup in your CSS.",
   "main": "index.js",
   "dependencies": {
     "lost": "^8.3.0",
     "postcss-advanced-variables": "^2.3.3",
+    "postcss-assets": "^5.0.0",
     "postcss-atroot": "^0.1.3",
     "postcss-calc": "^6.0.1",
     "postcss-extend-rule": "^2.0.0",
@@ -13,7 +14,7 @@
     "postcss-nested": "^3.0.0",
     "postcss-nested-ancestors": "^2.0.0",
     "postcss-plugin-bem-atrule": "^1.0.0",
-    "postcss-preset-env": "^5.3.0",
+    "postcss-preset-env": "^6.0.10",
     "postcss-property-lookup": "^2.0.0",
     "postcss-sass-color-functions": "^1.1.0",
     "postcss-url": "^8.0.0",
@@ -21,5 +22,24 @@
   },
   "repository": "https://github.com/SpringLIAO/vue-cli-plugin-postcss-precss.git",
   "author": "SpringLIAO <www.389055604@qq.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": [
+    "vue-cli",
+    "vue-cli 3.0",
+    "plugin",
+    "precss",
+    "sass-like",
+    "postcss",
+    "css",
+    "postcss-plugin",
+    "specifications",
+    "specs",
+    "features",
+    "lists",
+    "stages",
+    "w3c",
+    "csswg",
+    "future",
+    "next"
+  ]
 }
